# webots-controller

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.py  lefthook.yml
patches/: msvc-controller-c.patch
src/controller/c/: CMakeLists.txt  no_plugins_stubs.c
src/controller/cpp/: CMakeLists.txt
test_package/: CMakeLists.txt  conanfile.py  test_package.c  test_package.cpp
